force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar tickets de voo.</description>
    <label>Ticket</label>
    <nameField>
        <label>N�mero do Ticket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>