force-app/main/default/objects/Ticket__c/fields/Voo_Volta__c.field-meta.xml
<CustomField>
    <fullName>Voo_Volta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voo de Volta</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Tickets (Voo de Volta)</relationshipLabel>
    <relationshipName>Tickets_Voo_Volta</relationshipName>
    <type>Lookup</type>
</CustomField>